--- a/locale/id.po
+++ b/locale/id.po
@@ -7,13 +7,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bibledit\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"PO-Revision-Date: 2021-03-24 19:55+0000\n"
+"PO-Revision-Date: 2021-03-26 01:18+0000\n"
 "Last-Translator: Phil Fields <oreo@bahasakita.net>\n"
 "Language-Team: Indonesian <id@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Launchpad (build 4446feb642ca86be4f6eceb855b408397dad6a50)\n"
+"X-Generator: Launchpad (build 21fefc602783aa4ba863a4a6c29d38d788ce04ad)\n"
 
 msgid "Has been sending and receiving during the past hour"
 msgstr ""
@@ -2152,6 +2152,9 @@ msgid "SWORD"
 msgstr ""
 
 msgid "User-defined"
+msgstr ""
+
+msgid "Comparative"
 msgstr ""
 
 msgid "Help and About"
@@ -4765,7 +4768,7 @@ msgstr "Pilihan materi penelitian dari BibleGateway"
 msgid "StudyLight resources"
 msgstr "Pilihan materi penelitian dari StudyLight"
 
-msgid "Comparative Resource"
+msgid "Comparative resources"
 msgstr ""
 
 msgid "User-defined resources"
@@ -4791,6 +4794,18 @@ msgid ""
 msgstr ""
 
 msgid "It displays a web page based on the focused passage within Bibledit."
+msgstr ""
+
+msgid "Create a new empty comparative resource"
+msgstr ""
+
+msgid "A comparative resource takes two existing resources as input."
+msgstr ""
+
+msgid "It compares the two resources."
+msgstr ""
+
+msgid "It displays the differences between the two."
 msgstr ""
 
 msgid "Image"
@@ -4823,32 +4838,6 @@ msgid "Progress will be visible in the Journal."
 msgstr ""
 
 msgid "Refresh the list of resources from BibleGateway."
-msgstr ""
-
-msgid "Title"
-msgstr ""
-
-msgid "Base resource"
-msgstr ""
-
-msgid "Updated resource"
-msgstr ""
-
-msgid "Add it to the Resources"
-msgstr ""
-
-msgid "This resource will display the base resource as a starting point."
-msgstr ""
-
-msgid "It will compare the updated resource with the base resource."
-msgstr ""
-
-msgid ""
-"Any extra words that the updated resource has added as compared to the base "
-"resource will be shown in bold."
-msgstr ""
-
-msgid "Any words that were removed will be shown in strikethrough."
 msgstr ""
 
 msgid "The following resources are being installed:"
@@ -4913,6 +4902,78 @@ msgstr ""
 msgid "Start the conversion process and view it in the Journal."
 msgstr ""
 
+msgid "Comparative resource"
+msgstr ""
+
+msgid "Title"
+msgstr ""
+
+msgid "Base resource"
+msgstr ""
+
+msgid "Updated resource"
+msgstr ""
+
+msgid "This resource will take the base resource as a starting point."
+msgstr ""
+
+msgid "It will compare the updated resource with the base resource."
+msgstr ""
+
+msgid ""
+"Any words that the updated resource has added as compared to the base "
+"resource will be shown in bold."
+msgstr ""
+
+msgid "Any words that were removed will be shown in strikethrough."
+msgstr ""
+
+msgid "Characters to remove"
+msgstr ""
+
+msgid ""
+"Characters to be removed from the base and updated resources before doing "
+"the comparison."
+msgstr ""
+
+msgid "Separate the characters by spaces."
+msgstr ""
+
+msgid "Example"
+msgstr ""
+
+msgid "Characters to replace"
+msgstr ""
+
+msgid ""
+"Characters to search for and be replaced in the base and updated resources "
+"before doing the comparison."
+msgstr ""
+
+msgid "Separate the sets by spaces."
+msgstr ""
+
+msgid "First enter the characters to search for."
+msgstr ""
+
+msgid "Then enter the = sign."
+msgstr ""
+
+msgid "Finally enter the characters to be substituted."
+msgstr ""
+
+msgid "Remove diacritics from the resources before doing the comparison."
+msgstr ""
+
+msgid "Do case folding of the resources before doing the comparison."
+msgstr ""
+
+msgid "Resource is ready"
+msgstr ""
+
+msgid "Delete this resource"
+msgstr ""
+
 msgid "Refresh the list of resources from StudyLight."
 msgstr ""
 
@@ -4973,6 +5034,9 @@ msgid "Edit text colour"
 msgstr ""
 
 msgid "Edit background colour"
+msgstr ""
+
+msgid "Add it to the Resources"
 msgstr ""
 
 msgid "Resource Organizer"
@@ -11171,6 +11235,9 @@ msgstr ""
 msgid "Select a StudyLight resource"
 msgstr ""
 
+msgid "Select a Comparative resource"
+msgstr ""
+
 msgid "Converting Bible to USFM Resource"
 msgstr ""
 
@@ -11228,21 +11295,6 @@ msgstr ""
 msgid "to be updated"
 msgstr ""
 
-msgid "Please enter the title for the comparative resource"
-msgstr ""
-
-msgid "Select a resource to be used as a base resource."
-msgstr ""
-
-msgid "The base resource is used as a starting point for the comparison."
-msgstr ""
-
-msgid "Select a resource to be used as the updated resource."
-msgstr ""
-
-msgid "The updated resource will be compared with the base resource."
-msgstr ""
-
 msgid "Select a book"
 msgstr ""
 
@@ -11276,10 +11328,43 @@ msgstr ""
 msgid "Please enter the link for the divider"
 msgstr ""
 
+msgid "Please enter a name for the new comparative resource"
+msgstr ""
+
+msgid "This comparative resource already exists"
+msgstr ""
+
+msgid "Please give a name for the comparative resource"
+msgstr ""
+
+msgid "The comparative resource was created"
+msgstr ""
+
 msgid "Converting USFM Resource to Bible"
 msgstr ""
 
 msgid "Conversion completed"
+msgstr ""
+
+msgid "Select a resource to be used as a base resource."
+msgstr ""
+
+msgid "The base resource is used as a starting point for the comparison."
+msgstr ""
+
+msgid "Select a resource to be used as the updated resource."
+msgstr ""
+
+msgid "The updated resource will be compared with the base resource."
+msgstr ""
+
+msgid "Enter or edit the characters to remove from the resources"
+msgstr ""
+
+msgid "Enter or edit the search and replace sets"
+msgstr ""
+
+msgid "Could not save"
 msgstr ""
 
 msgid "Unknown starting book."
@@ -11443,23 +11528,23 @@ msgid ""
 msgstr ""
 
 msgid "Damascus"
-msgstr ""
+msgstr "Damsyik"
 
 msgid ""
 "And while he travelled, he came near Damascus; and suddenly a light from "
 "heaven shone round about him."
-msgstr ""
+msgstr "Lihat Kisah 9:3 dalam TB."
 
 msgid "What is the name of the brother of Aaron the high priest?"
-msgstr ""
+msgstr "Siapakah adik Imam Besar Harun?"
 
 msgid "Moses"
-msgstr ""
+msgstr "Musa"
 
 msgid ""
 "And the anger of Jehova was kindled against Moses, and he said: Is not Aaron "
 "the Levite your brother?"
-msgstr ""
+msgstr "Lihat Keluaran 4:14."
 
 msgid "What is the name of the city where Jesus was born?"
 msgstr ""
@@ -11473,16 +11558,16 @@ msgid ""
 msgstr "Lihat Matius 2:1."
 
 msgid "What is the name of the island where John was sent to?"
-msgstr ""
+msgstr "Penulis kitab Wahyu, Yohanes, ditahan di pulau mana?"
 
 msgid "Patmos"
-msgstr ""
+msgstr "Patmos"
 
 msgid ""
 "I, John, your brother and companion in the persecution, and in the kingdom "
 "and endurance of Jesus Christ, was in the island which is called Patmos, "
 "because of the word of God, and because of the testimony of Jesus Christ."
-msgstr ""
+msgstr "Lihat Wahyu 1:9."
 
 msgid "Username should be at least two characters long"
 msgstr "Nama pengguna paling pendek adalah dua huruf"
